# helix

./: CHANGELOG.md  languages.toml
.github/workflows/: release.yml
helix-loader/src/: grammar.rs
helix-term/src/ui/: completion.rs  editor.rs  info.rs  menu.rs  picker.rs  popup.rs  prompt.rs
helix-tui/: Cargo.toml
helix-tui/src/: buffer.rs
helix-view/src/: graphics.rs
