[package]
name = "helix-tui"
version = "0.6.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
description = """
A library to build rich terminal user interfaces or dashboards
"""
edition = "2021"
license = "MPL-2.0"
categories = ["editor"]
repository = "https://github.com/helix-editor/helix"
homepage = "https://helix-editor.com"
include = ["src/**/*", "README.md"]

[features]
default = ["crossterm"]

[dependencies]
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.9"
srgb = "0.3.1"
ndarray = "0.15"
rgb = "0.8"
transpose = "0.2.1"
crossterm = { version = "0.23", optional = true }
serde = { version = "1", "optional" = true, features = ["derive"]}
helix-view = { version = "0.6", path = "../helix-view", features = ["term"] }
helix-core = { version = "0.6", path = "../helix-core" }

[dependencies.img2ctext]
git = "https://github.com/yvt/img2ctext.git"
rev = "454a6231f7f9aa25267a66f5ad2928121a1f4823"

